[package]
name = "turbo-s"
description = "Asynchronous reverse proxy server built in rust"
version = "0.0.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.0", features = ["full"]}
hyper = {version = "0.14", features = ["full"]}
anyhow = "1.0"
hyper-rustls = "0.22.1"
ttl_cache = "0.5.1"
http= "0.2.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio-util = { version = "0.7.4", features=["compat"] }
futures = { version = "0.3.18", features = ["compat"] }
async-rwlock = "1.0.0"